@@ -21,6 +21,11 @@ module Ruport::Data
       Table.new({:data => data.map { |r| r.to_a }}.merge(options))
     end
 
+    def method_missing(id,*args)
+     return as($1.to_sym) if id.to_s =~ /^to_(.*)/ 
+     super
+    end
+    
     attr_reader :data
     def_delegators :@data, :each, :length, :[], :empty?
   end
